added path to dataset building notebook

--- a/notebooks/capstone_copyright_case_study.ipynb
+++ b/notebooks/capstone_copyright_case_study.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Fair Use and Copyright Case Study\n",
     "\n",
-    "This project provides a study of U.S. court outcome and opinions about fair use and copyright civil cases.\n"
+    "This notebook provides a study of U.S. court outcome and opinions about fair use and copyright civil cases. \n"
    ]
   },
   {
