added outcome mappings to dataset script

--- a/notebooks/build_dataset.ipynb
+++ b/notebooks/build_dataset.ipynb
@@ -13,12 +13,17 @@
    "id": "7ba1784b",
    "metadata": {},
    "source": [
-    "pip install requests\n"
+    "pip install requests\n",
+    "<br>\n",
+    "take a look at: <br>\n",
+    "https://github.com/harvard-lil/cap-examples/blob/develop/README.md\n",
+    "<br>\n",
+    "https://github.com/harvard-lil/cap-examples/blob/develop/python_wrapper/README.md"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "0f5a56b4",
    "metadata": {},
    "outputs": [],
@@ -32,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "78c91747",
    "metadata": {},
    "outputs": [],
@@ -44,7 +49,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "7e89811a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disposition_to_outcome = {\n",
+    "    'Transfer to another district': 'pending',  \n",
+    "    'Remanded to state court': 'pending', \n",
+    "    'MDL Transfer': 'pending',  \n",
+    "    'Remanded to U.S. Agency': 'pending',  \n",
+    "    'Want of prosecution':  'copyright infringement not found',  \n",
+    "    'Lack of jurisdiction':  'copyright infringement not found', \n",
+    "    'Voluntarily': 'copyright infringement not found', \n",
+    "    'Settled': 'copyright infringement not found',  \n",
+    "    'Other': 'pending', \n",
+    "    'Default': 'copyright infringement found', \n",
+    "    'Consent': 'copyright infringement found',  \n",
+    "    'Motion before trial': 'copyright infringement found',  \n",
+    "    'Jury verdict': 'copyright infringement found', \n",
+    "    'Directed verdict': 'copyright infringement found', \n",
+    "    'Court trial': 'copyright infringement found', \n",
+    "    'Award of arbitrator': 'pending',  \n",
+    "    'Stayed pending bankruptcy': 'pending', \n",
+    "    'Other': 'pending',  \n",
+    "    'Statistical closing': 'copyright infringement not found',  \n",
+    "    'Appeal affirmed (magistrate judge)': 'copyright infringement not found',  \n",
+    "    'Appeal denied (magistrate judge)': 'copyright infringement found',  \n",
+    "    'Copyright infringement not found': 'copyright infringement not found',\n",
+    "    'Copyright infringement found' : 'copyright infringement found',\n",
+    "    'fair use found': 'fair use found',\n",
+    "    'fair use not found': 'fair use not found',\n",
+    "    'pending':'pending',\n",
+    "    'unknown': 'unknown'\n",
+    "}\n",
+    "\n",
+    "def extract_disposition(opinion_text):\n",
+    "    # Check the first page or a subset of the text for disposition\n",
+    "    possible_dispositions = disposition_to_outcome.keys()\n",
+    "    for disposition in possible_dispositions:\n",
+    "        if disposition.lower() in opinion_text.lower():\n",
+    "            return disposition_to_outcome[disposition]\n",
+    "    return 'unknown'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "22e1c979",
    "metadata": {},
    "outputs": [],
@@ -65,12 +116,15 @@
     "            else:\n",
     "                text = \"\" #\"Opinion not available without API key\"\n",
     "            \n",
+    "            outcome = extract_disposition(text)\n",
+    "            \n",
     "            case_data = {\n",
     "                \"case_type\": case_type,\n",
     "                \"year\": case['decision_date'][:4],\n",
     "                \"court\": case['court']['name'],\n",
     "                \"jurisdiction\": case['jurisdiction']['name'],\n",
-    "                \"opinions\": text\n",
+    "                \"opinions\": text,\n",
+    "                \"outcome\": outcome\n",
     "            }\n",
     "            case_list.append(case_data)\n",
     "        except Exception as e:\n",
@@ -81,7 +135,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
+   "id": "cdd7b02e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the word to column mappings\n",
+    "word_list = [\n",
+    "    'audiovisual', 'commentary', 'computer program', 'digitization', 'drawing',\n",
+    "    'education', 'film', 'format shifting', 'graphic', 'internet', 'music',\n",
+    "    'news reporting', 'painting', 'parody', 'photograph', 'research', #'review',\n",
+    "    'satire', 'scholarship', 'sculpture', 'space shifting', 'textual', 'unpublished',\n",
+    "    'used in government proceeding'\n",
+    "]\n",
+    "\n",
+    "def _build_tags(cases_df):\n",
+    "    # Iterate over the holding column and update the tags column\n",
+    "    for idx, row in cases_df.iterrows():\n",
+    "        holding_text = row['text']\n",
+    "        if pd.notna(holding_text):\n",
+    "            tags = []\n",
+    "            for word in word_list:\n",
+    "                if word in holding_text.lower():\n",
+    "                    tags.append(word)\n",
+    "            cases_df.at[idx, 'tags'] = ', '.join(tags)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "4db41000",
    "metadata": {},
    "outputs": [],
@@ -91,12 +173,14 @@
     "    df =df.drop_duplicates(keep=False)\n",
     "    df['case_type_encoded'] = df['case_type'].apply(lambda x: 1 if 'copyright' in x else 0)\n",
     "    df = df.rename(columns={'opinions':'text'})\n",
+    "    df['tags']=''\n",
+    "    _build_tags(df)\n",
     "    df.to_csv(filename, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "cd62a2ee",
    "metadata": {},
    "outputs": [
