adding recommendations section

--- a/notebooks/capstone_copyright_case_study.ipynb
+++ b/notebooks/capstone_copyright_case_study.ipynb
@@ -2373,21 +2373,20 @@
     "2. Proper text preprocessing and feature engineering are crucial for leveraging textual data effectively.\n",
     "\n",
     "### Conclusion\n",
-    "This project demonstrated that incorporating textual data from case opinions can enhance the predictive performance \n",
-    "of machine learning models for legal case outcomes. However, the benefits vary across different models and depend \n",
-    "heavily on appropriate text preprocessing and feature engineering. Gradient Boosting and SVM models showed the most \n",
-    "significant improvements with text data, indicating their ability to effectively utilize additional information.\n",
-    "The Random Forest Classifier with hyperparameter tuning the best model for the set without the opinion (text) \n",
-    "feature hyperparameter-tuned version (GridSearch with RandomForestClassifier_wo_op) showed more balanced performance, \n",
-    "suggesting that hyperparameter tuning effectively managed overfitting. Which\n",
-    "indicates that it generalizes well to unseen data and effectively balances precision and recall, making it the most suitable choice among the evaluated models for this specific feature set\n",
-    "Hyperparameter tuning further improved model performance, highlighting the importance of optimizing model parameters. The trade-off between computational cost (fit time) and model performance should be considered when deploying these models in practice.\n",
+    "Including case opinions (text feature) generally \n",
+    "improved the test accuracy and F1 score across most models. The Gradient Boosting model with case opinions achieved the \n",
+    "highest test accuracy (0.649) and F1 score (0.643) suggesting that this model is well-suited for the dataset.\n",
+    "The GridSearch improved model performance, particularly for Gradient Boosting and SVM models. \n",
+    "For instance, tuning the SVM model resulted in a test accuracy increase from 0.562 (default) to 0.617 \n",
+    "and the F1 score rose from 0.560 to 0.612.\n",
+    "<br><br>\n",
     "\n",
-    "\n",
-    "### Recomendation\n",
-    "Gradient Boosting and SVM models performed better for tasks involving the textual data,\n",
-    "as they demonstrated superior performance and performing hyperparameter tuning using techniques like Grid Search allows us\n",
-    "to achieve the best possible model performance.\n"
+    "### Next steps and recommendations\n",
+    "For future work, exploring additional text preprocessing techniques to further enhance model \n",
+    "performance would probably improve results. Some examples of additional text processing include \n",
+    "stemming, lemmatization, and the use of advanced embeddings like BERT to capture semantic meaning.\n",
+    "Also, fine-tuning hyperparameters for the GradientBoosting model could yield even better results.\n",
+    "Additionally, expanding the dataset with more cases could provide more robust and generalized predictions."
    ]
   },
   {
